--- a/server/.env
+++ b/server/.env
@@ -1,18 +1,18 @@
-MAIL_HOST=smtp.gmail.com
-MAIL_USER=aadiaadityaa7@gmail.com
-MAIL_PASSWORD=bisk yklz hddv cdji
+MAIL_HOST=
+MAIL_USER=
+MAIL_PASSWORD=
 
-JWT_SECRET="Aditya"
+JWT_SECRET=""
 FOLDER_NAME="codehelp"
 
-RAZORPAY_KEY=rzp_test_qouJKUZdInhII3
-RAZORPAY_SECRET=6SWlfLLWyNE77kPgwimR9MX6
+RAZORPAY_KEY=
+RAZORPAY_SECRET=
 
-CLOUDINARY_CLOUD_NAME=duhhemvzl
-CLODINARY_API_KEY=862229676889569
-CLODINARY_API_SECRET=e0Jp9N9H5-geA7g4DW-GTl_Nscs
+CLOUDINARY_CLOUD_NAME=
+CLODINARY_API_KEY=
+CLODINARY_API_SECRET=
 
-MONGODB_URL="mongodb+srv://aadiaadityaa7:CPIiaQYSpwU6VYq5@cluster0.hlm6c10.mongodb.net/StudyNotionDB"
+MONGODB_URL=""
 PORT=4000
 
 CONTACT_MAIL=rajaditya43355@gmail.com
